// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`call to action snapshot Call to action: 0 1`] = `
<a
  className="button-0-1-1 button-0-1-8 button__primary-0-1-2 button__primary-0-1-10 callToAction-0-1-11 callToAction__primary-0-1-13"
  data-sketch-symbol="Call to action - primary"
  href="https://www.microsoft.com/en-us/"
>
  <span
    className="button_contentRegion-0-1-6 button_contentRegion-0-1-9"
  >
    Primary call to action
  </span>
  <div
    className="callToAction_glyph-0-1-12"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"-4014.4 1616.998 4.4 8\\">
    <g transform=\\"translate(-4128 1600.698)\\">
        <path d=\\"M140.6,23.9l3.7-3.6-3.7-3.6.4-.4,4,4-4,4Z\\" transform=\\"translate(-27)\\"/>
    </g>
</svg>",
      }
    }
    slot="after"
  />
</a>
`;

exports[`call to action snapshot Call to action: 1 1`] = `
<a
  className="button-0-1-1 button-0-1-8 button__lightweight-0-1-4 callToAction-0-1-11 callToAction__lightweight-0-1-14"
  data-sketch-symbol="Call to action - lightweight"
  href="https://www.microsoft.com/en-us/"
>
  <span
    className="button_contentRegion-0-1-6 button_contentRegion-0-1-9"
  >
    Lightweight call to action
  </span>
  <div
    className="callToAction_glyph-0-1-12"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"-4014.4 1616.998 4.4 8\\">
    <g transform=\\"translate(-4128 1600.698)\\">
        <path d=\\"M140.6,23.9l3.7-3.6-3.7-3.6.4-.4,4,4-4,4Z\\" transform=\\"translate(-27)\\"/>
    </g>
</svg>",
      }
    }
    slot="after"
  />
</a>
`;

exports[`call to action snapshot Call to action: 2 1`] = `
<a
  className="button-0-1-1 button-0-1-8 button__justified-0-1-5 callToAction-0-1-11 callToAction__justified-0-1-15"
  data-sketch-symbol="Call to action - justified"
  href="https://www.microsoft.com/en-us/"
>
  <span
    className="button_contentRegion-0-1-6 button_contentRegion-0-1-9"
  >
    Justified call to action
  </span>
  <div
    className="callToAction_glyph-0-1-12"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"-4014.4 1616.998 4.4 8\\">
    <g transform=\\"translate(-4128 1600.698)\\">
        <path d=\\"M140.6,23.9l3.7-3.6-3.7-3.6.4-.4,4,4-4,4Z\\" transform=\\"translate(-27)\\"/>
    </g>
</svg>",
      }
    }
    slot="after"
  />
</a>
`;
